# Graphs_GUI

./: .gitignore  CMakeLists.txt  CMakePresets.json
examples/: 12nodes  5nodes  7nodes
src/: CMakeLists.txt  button.h  client.cpp  client.h  config.h.in  defines.h  graphWindow.cpp  graphWindow.h  hold.h  input.cpp  input.h  main.cpp  menu.h  message.h  model.cpp  model.h  utils.h  window.cpp  window.h
src/graph/: colors.h  connection.cpp  connection.h  model.cpp  model.h  node.cpp  node.h  tempConnection.cpp  tempConnection.h  utils.h
src/gui/: button.cpp  input.h  lines.cpp  lines.h  menu.cpp  menu.h  radio.cpp  radio.h
src/services/: directed.h  font.h  hold.h  iofile.cpp  iofile.h  keys.cpp  keys.h  tempConnection.cpp  tempConnection.h  tempLine.h
src/widgets/: button.h  input.cpp  input.h
test/: CMakeLists.txt  addNodes.cpp
